--- a/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
@@ -13,185 +13,185 @@
 }
 
 .TENCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/10Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/10Clubs.png');   
 }
 
 .TENDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/10Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/10Dimond.png');   
 }
 
 .TENHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/10Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/10Hearts.png');   
 }
 
 .TENSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/10Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/10Spades.png');   
 }
 
 .DEUCECLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/2Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/2Clubs.png');   
 }
 
 .DEUCEDIAMOND{
- -fx-image: url('/blackjackfx/resources/Images/Cards/2Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/2Clubs.png');   
 }
 
 .DEUCEHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/2Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/2Hearts.png');   
 }
 
 .DEUCESPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/2Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/2Spades.png');   
 }
 
 .THREECLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/3Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/3Clubs.png');   
 }
 
 .THREEDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/3Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/3Dimond.png');   
 }
 
 .THREEHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/3Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/3Hearts.png');   
 }
 
 .THREESPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/3Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/3Spades.png');   
 }
 
 .FOURCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/4Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/4Clubs.png');   
 }
 .FOURDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/4Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/4Dimond.png');   
 }
 .FOURSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/4Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/4Spades.png');   
 }
 .FOURHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/4Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/4Hearts.png');   
 }
 .FIVECLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/5Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/5Clubs.png');   
 }
 
 .FIVEDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/5Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/5Dimond.png');   
 }
 
 .FIVEHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/5Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/5Hearts.png');   
 }
 .FIVESPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/5Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/5Spades.png');   
 }
 .SIXCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/6Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/6Clubs.png');   
 }
 .SIXDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/6Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/6Dimond.png');   
 }
 .SIXHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/6Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/6Hearts.png');   
 }
 
 .SIXSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/6Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/6Spades.png');   
 }
 
 .SEVENCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/7Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/7Clubs.png');   
 }
 .SEVENDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/7Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/7Dimond.png');   
 }
 .SEVENHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/7Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/7Hearts.png');   
 }
 .SEVENSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/7Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/7Spades.png');   
 }
 .EIGHTCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/8Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/8Clubs.png');   
 }
 
 .EIGHTDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/8Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/8Dimond.png');   
 }
 
 .EIGHTHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/8Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/8Hearts.png');   
 }
 .EIGHTSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/8Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/8Spades.png');   
 }
 .NINECLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/9Clubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/9Clubs.png');   
 }
 .NINEDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/9Dimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/9Dimond.png');   
 }
 .NINEHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/9Hearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/9Hearts.png');   
 }
 
 .NINESPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/9Spades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/9Spades.png');   
 }
 
 .JACKCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/JClubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/JClubs.png');   
 }
 .JACKDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/JDimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/JDimond.png');   
 }
 .JACKHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/JHearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/JHearts.png');   
 }
 .JACKSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/JSpades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/JSpades.png');   
 }
 .QUEENCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/QClubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/QClubs.png');   
 }
 
 .QUEENDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/QDimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/QDimond.png');   
 }
 
 .QUEENHEARTS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/QHearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/QHearts.png');   
 }
 .QUEENSPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/QSpades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/QSpades.png');   
 }
 .KINGCLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/KClubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/KClubs.png');   
 }
 .KINGDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/KDimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/KDimond.png');   
 }
 .KINGHEARTS
 {
- -fx-image: url('/blackjackfx/resources/Images/Cards/KHearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/KHearts.png');   
 }
 
 .KINGSPADES
 {
- -fx-image: url('/blackjackfx/resources/Images/Cards/KSpades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/KSpades.png');   
 }
 
 .ACECLUBS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/AceClubs');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/AceClubs.png');   
 }
 .ACEDIAMONDS{
- -fx-image: url('/blackjackfx/resources/Images/Cards/AceDimond');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/AceDimond.png');   
 }
 .ACEHEARTS
 {
- -fx-image: url('/blackjackfx/resources/Images/Cards/AceHearts');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/AceHearts.png');   
 }
 .ACESPADES{
- -fx-image: url('/blackjackfx/resources/Images/Cards/AceSpades');   
+ -fx-image: url('/blackjackfx/resources/Images/Cards/AceSpades.png');   
 }
