--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -16,8 +16,7 @@
         <Image url="@resources/Images/Background/bacgreen2.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <HBox fx:id="DealerCards" layoutX="398.0" layoutY="104.0" prefHeight="100.0" prefWidth="283.0" />
-    <Pane fx:id="DealerInfo" layoutX="468.0" layoutY="14.0" prefHeight="100.0" prefWidth="120.0" />
+    <Pane fx:id="PDealerPane" layoutX="636.0" layoutY="46.0" prefHeight="100.0" prefWidth="120.0" />
     <Button layoutX="40.0" layoutY="22.0" mnemonicParsing="false" onAction="#StartRound" prefHeight="24.0" prefWidth="100.0" text="Start Round" />
     <Button fx:id="btnDouble" layoutX="479.0" layoutY="283.0" mnemonicParsing="false" onAction="#DoublePress" text="Double" />
     <Button fx:id="btnHit" layoutX="481.0" layoutY="324.0" mnemonicParsing="false" onAction="#HitPress" prefWidth="59.0" text="Hit" />
@@ -68,7 +67,8 @@
         <Pane fx:id="pPlayerPane6" layoutX="-2.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
       </children>
     </AnchorPane>
-    <Label fx:id="MsgLable" layoutX="40.0" layoutY="124.0" prefHeight="21.000099999997474" prefWidth="187.00009999999747" text="" />
+    <Label fx:id="MsgLable" layoutX="40.0" layoutY="124.0" prefHeight="22.0" prefWidth="265.0" text="" />
+    <VBox fx:id="vbxDealerHand" layoutX="324.0" layoutY="61.0" prefHeight="71.0" prefWidth="265.0" />
   </children>
   <stylesheets>
     <URL value="@resources/CSS/gamescreen.css" />
