--- a/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
@@ -32,7 +32,7 @@
  -fx-image: url('/blackjackfx/resources/Images/Cards/2Clubs.png');   
 }
 
-.DEUCEDIAMOND{
+.DEUCEDIAMONDS{
  -fx-image: url('/blackjackfx/resources/Images/Cards/2Dimond.png');   
 }
 
