--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -68,7 +68,7 @@
       </children>
     </AnchorPane>
     <Label fx:id="MsgLable" layoutX="40.0" layoutY="124.0" prefHeight="22.0" prefWidth="265.0" text="" />
-    <VBox fx:id="vbxDealerHand" layoutX="324.0" layoutY="61.0" prefHeight="71.0" prefWidth="265.0" />
+    <HBox fx:id="vbxDealerHand" layoutX="256.0" layoutY="89.0" prefHeight="71.0" prefWidth="276.0" />
   </children>
   <stylesheets>
     <URL value="@resources/CSS/gamescreen.css" />
