--- a/BlackJackFX/src/blackjackfx/BidInput.fxml
+++ b/BlackJackFX/src/blackjackfx/BidInput.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="188.9609375" prefWidth="363.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="blackjackfx.Controllers.BidInputController">
+<AnchorPane id="AnchorPane" prefHeight="188.9609375" prefWidth="363.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.BidInputController">
   <!--stylesheets>
         <URL value="@/blackjackfx/resources/CSS/bidinput.css"/>
     </stylesheets-->
   <children>
     <Slider fx:id="SdBidAmount" layoutX="14.0" layoutY="56.0" prefWidth="289.0" />
-    <Button id="OK" fx:id="btnFinish" layoutX="110.0" layoutY="112.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="97.0" text="Finish" />
+    <Button id="OK" fx:id="btnFinish" layoutX="110.0" layoutY="112.0" mnemonicParsing="false" onAction="#Finish" prefHeight="36.0" prefWidth="97.0" text="Finish" />
     <Label fx:id="lblPlayerName" layoutX="14.0" layoutY="14.0" text="Label" />
     <TextField fx:id="Amount" layoutX="303.0" layoutY="52.0" onAction="#Finish" prefWidth="47.0" />
   </children>
