--- a/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
@@ -22,6 +22,9 @@
     -fx-background-image: url('/blackjackfx/resources/Images/players/Dealer.png');
 }
 
+.PlayerFocus{
+    -fx-background-color: red;
+}
 .TENCLUBS{
  -fx-image: url('/blackjackfx/resources/Images/Cards/10Clubs.png');   
 }
