--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -29,42 +29,72 @@
       <children>
         <VBox fx:id="vbxPlayerBid1b" layoutX="67.0" layoutY="4.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
-        <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
+        <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+          <children>
+            <Label fx:id="pPlayerBid21" layoutX="93.0" layoutY="68.0" text="" />
+            <Label fx:id="pPlayerBid1" layoutX="93.0" layoutY="6.0" text="" />
+          </children>
+        </Pane>
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer2" layoutX="146.0" layoutY="212.0" prefHeight="456.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid2b" layoutX="70.0" layoutY="-2.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid2a" layoutX="3.0" layoutY="-3.0" prefHeight="350.0" prefWidth="58.0" />
-        <Pane fx:id="pPlayerPane2" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
+        <Pane fx:id="pPlayerPane2" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+          <children>
+            <Label fx:id="pPlayerBid2" layoutX="93.0" layoutY="3.0" text="" />
+            <Label fx:id="pPlayerBid22" layoutX="93.0" layoutY="62.0" text="" />
+          </children>
+        </Pane>
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer3" layoutX="291.0" layoutY="207.0" prefHeight="456.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid3b" layoutX="69.0" layoutY="3.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid3a" layoutX="1.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
-        <Pane fx:id="pPlayerPane3" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
+        <Pane fx:id="pPlayerPane3" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+          <children>
+            <Label fx:id="pPlayerBid3" layoutX="93.0" layoutY="6.0" text="" />
+            <Label fx:id="pPlayerBid32" layoutX="93.0" layoutY="65.0" text="" />
+          </children>
+        </Pane>
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer4" layoutX="578.0" layoutY="210.0" prefHeight="456.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid4b" layoutX="68.0" layoutY="-1.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid4a" layoutX="0.0" layoutY="-1.0" prefHeight="350.0" prefWidth="58.0" />
-        <Pane fx:id="pPlayerPane4" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
+        <Pane fx:id="pPlayerPane4" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+          <children>
+            <Label fx:id="pPlayerBid4" layoutX="93.0" layoutY="6.0" text="" />
+            <Label fx:id="pPlayerBid42" layoutX="93.0" layoutY="65.0" text="" />
+          </children>
+        </Pane>
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer5" layoutX="721.0" layoutY="207.0" prefHeight="456.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid5b" layoutX="68.0" layoutY="3.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid5a" layoutX="1.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
-        <Pane fx:id="pPlayerPane5" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
+        <Pane fx:id="pPlayerPane5" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+          <children>
+            <Label fx:id="pPlayerBid5" layoutX="93.0" layoutY="6.0" text="" />
+            <Label fx:id="pPlayerBid52" layoutX="93.0" layoutY="68.0" text="" />
+          </children>
+        </Pane>
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer6" layoutX="865.0" layoutY="210.0" prefHeight="456.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid6b" layoutX="67.0" layoutY="-2.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid6a" layoutX="0.0" layoutY="-1.0" prefHeight="350.0" prefWidth="58.0" />
-        <Pane fx:id="pPlayerPane6" layoutX="-2.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0" />
+        <Pane fx:id="pPlayerPane6" layoutX="-2.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+          <children>
+            <Label fx:id="pPlayerBid6" layoutX="93.0" layoutY="3.0" text="" />
+            <Label fx:id="pPlayerBid62" layoutX="93.0" layoutY="68.0" text="" />
+          </children>
+        </Pane>
       </children>
     </AnchorPane>
     <Label fx:id="MsgLable" layoutX="40.0" layoutY="124.0" prefHeight="22.0" prefWidth="265.0" text="" />
