--- a/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
@@ -12,6 +12,13 @@
     -fx-font-size: 20 px;
     
 }
+.BidClass
+{
+    -fx-alignment: center;
+    -fx-text-fill: white;
+    -fx-font-size: 15 px;
+    
+}
 #AnchorPane
 {
  -fx-background-image: url('/blackjackfx/resources/Images/Background/bacgreen2.png');   
