--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -7,10 +7,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?scenebuilder-stylesheet resources/CSS/gamescreen.css?>
 
 <AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="667.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.GameScreenController">
   <children>
+    <Label fx:id="lblPlayerEndRound" layoutX="447.0" layoutY="283.0" prefHeight="57.0" prefWidth="111.0" text="Label" textFill="WHITE">
+      <font>
+        <Font size="14.0" />
+      </font>
+    </Label>
     <ImageView id="bacgreen2.png" layoutX="0.0" layoutY="1.0">
       <image>
         <Image url="@resources/Images/Background/bacgreen2.png" preserveRatio="true" smooth="true" />
@@ -27,14 +33,14 @@
     <Button fx:id="btnExitGame" layoutX="493.0" layoutY="528.0" mnemonicParsing="false" onAction="#ExitPress" text="Exit" />
     <AnchorPane fx:id="apPlayer1" layoutX="5.0" layoutY="207.0" prefHeight="456.0" prefWidth="135.0">
       <children>
-        <VBox fx:id="vbxPlayerBid1b" layoutX="67.0" layoutY="4.0" prefHeight="350.0" prefWidth="72.0" />
-        <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
             <Label fx:id="pPlayerBid21" layoutX="93.0" layoutY="68.0" text="" />
             <Label fx:id="pPlayerBid1" layoutX="93.0" layoutY="6.0" text="" />
           </children>
         </Pane>
+        <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid1b" layoutX="67.0" layoutY="4.0" prefHeight="350.0" prefWidth="72.0" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer2" layoutX="146.0" layoutY="212.0" prefHeight="456.0" prefWidth="135.0">
@@ -99,6 +105,8 @@
     </AnchorPane>
     <Label fx:id="MsgLable" layoutX="40.0" layoutY="124.0" prefHeight="22.0" prefWidth="265.0" text="" />
     <HBox fx:id="vbxDealerHand" layoutX="456.0" layoutY="89.0" prefHeight="71.0" prefWidth="276.0" />
+    <Button fx:id="btnPlayerContinue" layoutX="449.0" layoutY="350.0" mnemonicParsing="false" onAction="#PlayerContGame" text="Continue Game" />
+    <Button fx:id="btnPlayerExit" layoutX="473.0" layoutY="380.0" mnemonicParsing="false" onAction="#PlayerExitGame" text="Exit" />
   </children>
   <stylesheets>
     <URL value="@resources/CSS/gamescreen.css" />
