--- a/BlackJackFX/src/blackjackfx/BidInput.fxml
+++ b/BlackJackFX/src/blackjackfx/BidInput.fxml
@@ -14,7 +14,11 @@
   <children>
     <Slider fx:id="SdBidAmount" layoutX="14.0" layoutY="56.0" prefWidth="289.0" />
     <Button id="OK" fx:id="btnFinish" layoutX="110.0" layoutY="112.0" mnemonicParsing="false" onAction="#Finish" prefHeight="36.0" prefWidth="97.0" text="Finish" />
-    <Label fx:id="lblPlayerName" layoutX="14.0" layoutY="14.0" text="Label" />
+    <Label fx:id="lblPlayerName" layoutX="56.0" layoutY="14.0" text="Label" />
     <TextField fx:id="Amount" layoutX="303.0" layoutY="52.0" onAction="#Finish" prefWidth="47.0" />
+    <Label layoutX="14.0" layoutY="14.0" text="Player" />
   </children>
+  <stylesheets>
+    <URL value="@resources/CSS/bidinput.css" />
+  </stylesheets>
 </AnchorPane>
