--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -10,20 +10,20 @@
 <?import javafx.scene.text.*?>
 <?scenebuilder-stylesheet resources/CSS/gamescreen.css?>
 
-<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="667.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.GameScreenController">
+<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="683.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.GameScreenController">
   <children>
     <Label fx:id="lblPlayerEndRound" layoutX="447.0" layoutY="283.0" prefHeight="57.0" prefWidth="111.0" text="Label" textFill="WHITE">
       <font>
         <Font size="14.0" />
       </font>
     </Label>
-    <ImageView id="bacgreen2.png" layoutX="0.0" layoutY="1.0">
+    <ImageView id="" fitHeight="682.0" fitWidth="1001.0" layoutX="-1.0" layoutY="1.0">
       <image>
-        <Image url="@resources/Images/Background/bacgreen2.png" preserveRatio="true" smooth="true" />
+        <Image url="@resources/Images/Background/game_screen2.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <Pane id="pDealerPane" fx:id="PDealerPane" layoutX="751.0" layoutY="14.0" prefHeight="100.0" prefWidth="120.0" />
-    <Button fx:id="btnStartRound" layoutX="40.0" layoutY="22.0" mnemonicParsing="false" onAction="#StartRound" prefHeight="24.0" prefWidth="100.0" text="Start Round" />
+    <Pane id="pDealerPane" fx:id="PDealerPane" layoutX="628.0" layoutY="61.0" prefHeight="100.0" prefWidth="120.0" />
+    <Button fx:id="btnStartRound" layoutX="44.0" layoutY="2.0" mnemonicParsing="false" onAction="#StartRound" prefHeight="24.0" prefWidth="100.0" text="Start Round" />
     <Button fx:id="btnDouble" layoutX="479.0" layoutY="283.0" mnemonicParsing="false" onAction="#DoublePress" text="Double" />
     <Button fx:id="btnHit" layoutX="481.0" layoutY="324.0" mnemonicParsing="false" onAction="#HitPress" prefWidth="59.0" text="Hit" />
     <Button fx:id="btnSplit" layoutX="482.0" layoutY="370.0" mnemonicParsing="false" onAction="#SplitPress" prefWidth="59.000099999997474" text="Split" />
@@ -31,80 +31,80 @@
     <Button fx:id="btnContinue" layoutX="456.0" layoutY="455.0" mnemonicParsing="false" onAction="#ContinuePress" text="Continue Game" />
     <Button fx:id="btnSaveGame" layoutX="471.0" layoutY="497.0" mnemonicParsing="false" onAction="#SavePress" text="Save Game" />
     <Button fx:id="btnExitGame" layoutX="493.0" layoutY="528.0" mnemonicParsing="false" onAction="#ExitPress" text="Exit" />
-    <AnchorPane fx:id="apPlayer1" layoutX="5.0" layoutY="207.0" prefHeight="456.0" prefWidth="135.0">
+    <AnchorPane fx:id="apPlayer1" layoutX="44.0" layoutY="167.0" prefHeight="405.9998779296875" prefWidth="135.0">
       <children>
         <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid21" layoutX="93.0" layoutY="68.0" text="" />
-            <Label fx:id="pPlayerBid1" layoutX="93.0" layoutY="6.0" text="" />
+            <Label fx:id="pPlayerBid21" layoutX="93.0" layoutY="68.0" text="" textFill="WHITE" />
+            <Label fx:id="pPlayerBid1" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
           </children>
         </Pane>
         <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
         <VBox fx:id="vbxPlayerBid1b" layoutX="67.0" layoutY="4.0" prefHeight="350.0" prefWidth="72.0" />
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="apPlayer2" layoutX="146.0" layoutY="212.0" prefHeight="456.0" prefWidth="135.0">
+    <AnchorPane fx:id="apPlayer2" layoutX="179.0" layoutY="213.0" prefHeight="405.9998779296875" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid2b" layoutX="70.0" layoutY="-2.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid2a" layoutX="3.0" layoutY="-3.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane2" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid2" layoutX="93.0" layoutY="3.0" text="" />
-            <Label fx:id="pPlayerBid22" layoutX="93.0" layoutY="62.0" text="" />
+            <Label fx:id="pPlayerBid2" layoutX="93.0" layoutY="3.0" text="" textFill="WHITE" />
+            <Label fx:id="pPlayerBid22" layoutX="93.0" layoutY="62.0" text="" textFill="WHITE" />
           </children>
         </Pane>
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="apPlayer3" layoutX="291.0" layoutY="207.0" prefHeight="456.0" prefWidth="135.0">
+    <AnchorPane fx:id="apPlayer3" layoutX="322.0" layoutY="235.0" prefHeight="406.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid3b" layoutX="69.0" layoutY="3.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid3a" layoutX="1.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane3" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid3" layoutX="93.0" layoutY="6.0" text="" />
-            <Label fx:id="pPlayerBid32" layoutX="93.0" layoutY="65.0" text="" />
+            <Label fx:id="pPlayerBid3" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
+            <Label fx:id="pPlayerBid32" layoutX="93.0" layoutY="65.0" text="" textFill="WHITE" />
           </children>
         </Pane>
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="apPlayer4" layoutX="578.0" layoutY="210.0" prefHeight="456.0" prefWidth="135.0">
+    <AnchorPane fx:id="apPlayer4" layoutX="554.0" layoutY="218.0" prefHeight="406.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid4b" layoutX="68.0" layoutY="-1.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid4a" layoutX="0.0" layoutY="-1.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane4" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid4" layoutX="93.0" layoutY="6.0" text="" />
-            <Label fx:id="pPlayerBid42" layoutX="93.0" layoutY="65.0" text="" />
+            <Label fx:id="pPlayerBid4" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
+            <Label fx:id="pPlayerBid42" layoutX="93.0" layoutY="65.0" text="" textFill="WHITE" />
           </children>
         </Pane>
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="apPlayer5" layoutX="721.0" layoutY="207.0" prefHeight="456.0" prefWidth="135.0">
+    <AnchorPane fx:id="apPlayer5" layoutX="687.0" layoutY="204.0" prefHeight="406.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid5b" layoutX="68.0" layoutY="3.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid5a" layoutX="1.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane5" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid5" layoutX="93.0" layoutY="6.0" text="" />
-            <Label fx:id="pPlayerBid52" layoutX="93.0" layoutY="68.0" text="" />
+            <Label fx:id="pPlayerBid5" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
+            <Label fx:id="pPlayerBid52" layoutX="93.0" layoutY="68.0" text="" textFill="WHITE" />
           </children>
         </Pane>
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="apPlayer6" layoutX="865.0" layoutY="210.0" prefHeight="456.0" prefWidth="135.0">
+    <AnchorPane fx:id="apPlayer6" layoutX="822.0" layoutY="155.0" prefHeight="406.0" prefWidth="135.0">
       <children>
         <VBox fx:id="vbxPlayerBid6b" layoutX="67.0" layoutY="-2.0" prefHeight="350.0" prefWidth="72.0" />
         <VBox fx:id="vbxPlayerBid6a" layoutX="0.0" layoutY="-1.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane6" layoutX="-2.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid6" layoutX="93.0" layoutY="3.0" text="" />
-            <Label fx:id="pPlayerBid62" layoutX="93.0" layoutY="68.0" text="" />
+            <Label fx:id="pPlayerBid6" layoutX="93.0" layoutY="3.0" text="" textFill="WHITE" />
+            <Label fx:id="pPlayerBid62" layoutX="93.0" layoutY="68.0" text="" textFill="WHITE" />
           </children>
         </Pane>
       </children>
     </AnchorPane>
-    <Label fx:id="MsgLable" layoutX="5.0" layoutY="124.0" prefHeight="25.0" prefWidth="444.0" text="" />
-    <HBox fx:id="vbxDealerHand" layoutX="456.0" layoutY="89.0" prefHeight="71.0" prefWidth="276.0" />
+    <Label fx:id="MsgLable" layoutX="67.0" layoutY="58.0" prefHeight="25.0" prefWidth="444.0" text="" />
+    <HBox fx:id="vbxDealerHand" layoutX="369.0" layoutY="89.0" prefHeight="71.0" prefWidth="276.0" />
     <Button fx:id="btnPlayerContinue" layoutX="449.0" layoutY="350.0" mnemonicParsing="false" onAction="#PlayerContGame" text="Continue Game" />
     <Button fx:id="btnPlayerExit" layoutX="473.0" layoutY="380.0" mnemonicParsing="false" onAction="#PlayerExitGame" text="Exit" />
   </children>
