--- a/BlackJackFX/src/blackjackfx/resources/CSS/bidinput.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/bidinput.css
@@ -5,3 +5,11 @@
 .mainFxmlClass {
 
 }
+
+#AnchorPane{
+    -fx-background-image: url('/blackjackfx/resources/Images/Background/bj_background.jpg');
+}
+
+.label{
+    -fx-text-fill: white;
+}
