--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -13,9 +13,9 @@
   <children>
     <Pane layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="600.0">
       <children>
-        <Label fx:id="lblPlayerName" layoutX="14.0" layoutY="98.0" text="Player Name" />
-        <TextField fx:id="TextName" layoutX="111.0" layoutY="98.0" onAction="#TextNameAction" prefWidth="200.0" />
-        <Button id="PlayerName" fx:id="BtnAdd" layoutX="339.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddPlayer" prefHeight="20.484375" prefWidth="87.0" text="Add Player" />
+        <Label fx:id="lblPlayerName" layoutX="14.0" layoutY="98.0" prefWidth="101.0" text="Player Name" />
+        <TextField fx:id="TextName" layoutX="133.0" layoutY="98.0" onAction="#TextNameAction" prefWidth="200.0" />
+        <Button id="PlayerName" fx:id="BtnAdd" layoutX="382.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddPlayer" prefHeight="22.998046875" prefWidth="94.0" text="Add Player" />
         <Label fx:id="lblPlayersJoined" layoutX="14.0" layoutY="136.0" text="Players Joined" />
         <Button fx:id="BtnStart" layoutX="238.0" layoutY="348.0" mnemonicParsing="false" onAction="#OnStartGame" prefHeight="31.484275000002526" prefWidth="101.0" text="Start Game" />
         <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="172.0" prefHeight="189.00009999999747" prefWidth="572.0" />
@@ -27,8 +27,8 @@
             <URL value="@resources/CSS/createplayersscreen.css" />
           </stylesheets>
         </Label>
-        <Label layoutX="14.0" layoutY="28.0" text="Choose Player Type" />
-        <ComboBox fx:id="cbPlayerType" editable="false" layoutX="153.0" layoutY="29.0" onAction="#SetPlayerType" prefWidth="87.0" promptText="PlayerType">
+        <Label layoutX="14.0" layoutY="28.0" prefWidth="158.0" text="Choose Player Type" />
+        <ComboBox fx:id="cbPlayerType" editable="false" layoutX="181.0" layoutY="29.0" onAction="#SetPlayerType" prefWidth="87.0" promptText="PlayerType">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Human" />
