--- a/BlackJackFX/src/blackjackfx/resources/CSS/createplayersscreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/createplayersscreen.css
@@ -6,10 +6,19 @@
 
 }
 
-.button{
+.button {
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-size: 14 px;
+    -fx-background-color: linear-gradient(#cc9900,#cc6600);
     -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
-    
 }
+
+.button:hover{
+ -fx-background-color: linear-gradient(#cc6600,#cc9900);   
+}
+
+
 #AnchorPane{
     -fx-background-image: url('/blackjackfx/resources/Images/Background/bj_background.jpg');
 }
@@ -22,7 +31,7 @@
 
 .label{
     -fx-font-family :"serif";
-    -fx-font-weight: "bold";
+    -fx-font-weight: bold;
     -fx-font-size: 16 px;
    -fx-text-fill: white;
     
