--- a/BlackJackFX/src/blackjackfx/resources/CSS/bidinput.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/bidinput.css
@@ -10,6 +10,21 @@
     -fx-background-image: url('/blackjackfx/resources/Images/Background/bj_background.jpg');
 }
 
+.button {
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-size: 16 px;
+    -fx-background-color: linear-gradient(#cc9900,#cc6600);
+    -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
+}
+
+.button:hover{
+ -fx-background-color: linear-gradient(#cc6600,#cc9900);   
+}
+
 .label{
+    -fx-font-family :"serif";
+    -fx-font-weight: bold;
+    -fx-font-size: 14 px;
     -fx-text-fill: white;
 }
