--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -33,74 +33,92 @@
     <Button fx:id="btnExitGame" layoutX="493.0" layoutY="528.0" mnemonicParsing="false" onAction="#ExitPress" text="Exit" />
     <AnchorPane fx:id="apPlayer1" layoutX="44.0" layoutY="167.0" prefHeight="405.9998779296875" prefWidth="135.0">
       <children>
-        <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
+        <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="368.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid21" layoutX="93.0" layoutY="68.0" text="" textFill="WHITE" />
-            <Label fx:id="pPlayerBid1" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
+            <Label layoutX="68.0" layoutY="14.0" text="Total Money" />
+            <Label fx:id="lblPlayerMoney1" layoutX="73.0" layoutY="28.0" prefWidth="53.0" text="" />
           </children>
         </Pane>
-        <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
-        <VBox fx:id="vbxPlayerBid1b" layoutX="67.0" layoutY="4.0" prefHeight="350.0" prefWidth="72.0" />
+        <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="39.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid1b" layoutX="68.0" layoutY="39.0" prefHeight="350.0" prefWidth="72.0" />
+        <Label fx:id="pPlayerBid1" layoutX="28.0" layoutY="7.0" prefHeight="24.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label fx:id="pPlayerBid21" layoutX="84.0" layoutY="7.0" prefHeight="20.0" prefWidth="58.0" text="" textFill="WHITE" />
+        <Label layoutX="-6.0" layoutY="10.0" prefWidth="32.0" text="Bet:" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer2" layoutX="179.0" layoutY="213.0" prefHeight="405.9998779296875" prefWidth="135.0">
       <children>
-        <VBox fx:id="vbxPlayerBid2b" layoutX="70.0" layoutY="-2.0" prefHeight="350.0" prefWidth="72.0" />
-        <VBox fx:id="vbxPlayerBid2a" layoutX="3.0" layoutY="-3.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid2b" layoutX="70.0" layoutY="40.0" prefHeight="350.0" prefWidth="72.0" />
+        <VBox fx:id="vbxPlayerBid2a" layoutX="3.0" layoutY="40.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane2" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid2" layoutX="93.0" layoutY="3.0" text="" textFill="WHITE" />
-            <Label fx:id="pPlayerBid22" layoutX="93.0" layoutY="62.0" text="" textFill="WHITE" />
+            <Label layoutX="68.0" layoutY="7.0" text="Total Money" />
+            <Label fx:id="lblPlayerMoney2" layoutX="68.0" layoutY="21.0" prefWidth="60.0" text="" />
           </children>
         </Pane>
+        <Label fx:id="pPlayerBid22" layoutX="78.0" layoutY="7.0" prefHeight="20.0" prefWidth="58.0" text="" textFill="WHITE" />
+        <Label fx:id="pPlayerBid2" layoutX="21.0" layoutY="7.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label layoutX="-8.0" layoutY="7.0" text="Bet:" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer3" layoutX="322.0" layoutY="235.0" prefHeight="406.0" prefWidth="135.0">
       <children>
-        <VBox fx:id="vbxPlayerBid3b" layoutX="69.0" layoutY="3.0" prefHeight="350.0" prefWidth="72.0" />
-        <VBox fx:id="vbxPlayerBid3a" layoutX="1.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid3b" layoutX="66.0" layoutY="32.0" prefHeight="350.0" prefWidth="72.0" />
+        <VBox fx:id="vbxPlayerBid3a" layoutX="1.0" layoutY="32.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane3" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid3" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
-            <Label fx:id="pPlayerBid32" layoutX="93.0" layoutY="65.0" text="" textFill="WHITE" />
+            <Label layoutX="68.0" layoutY="7.0" text="Total Money" />
+            <Label fx:id="lblPlayerMoney3" layoutX="68.0" layoutY="21.0" prefWidth="60.0" text="" />
           </children>
         </Pane>
+        <Label fx:id="pPlayerBid3" layoutX="22.0" layoutY="8.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label fx:id="pPlayerBid32" layoutX="73.0" layoutY="8.0" prefHeight="20.0" prefWidth="58.0" text="" textFill="WHITE" />
+        <Label layoutX="-8.0" layoutY="11.0" text="Bet:" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer4" layoutX="554.0" layoutY="218.0" prefHeight="406.0" prefWidth="135.0">
       <children>
-        <VBox fx:id="vbxPlayerBid4b" layoutX="68.0" layoutY="-1.0" prefHeight="350.0" prefWidth="72.0" />
-        <VBox fx:id="vbxPlayerBid4a" layoutX="0.0" layoutY="-1.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid4b" layoutX="68.0" layoutY="35.0" prefHeight="350.0" prefWidth="72.0" />
+        <VBox fx:id="vbxPlayerBid4a" layoutX="0.0" layoutY="35.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane4" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid4" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
-            <Label fx:id="pPlayerBid42" layoutX="93.0" layoutY="65.0" text="" textFill="WHITE" />
+            <Label layoutX="68.0" layoutY="7.0" text="Total Money" />
+            <Label fx:id="lblPlayerMoney4" layoutX="68.0" layoutY="21.0" prefWidth="60.0" text="" />
           </children>
         </Pane>
+        <Label layoutX="0.0" layoutY="7.0" text="Bet:" />
+        <Label fx:id="pPlayerBid4" layoutX="29.0" layoutY="8.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label fx:id="pPlayerBid42" layoutX="81.0" layoutY="8.0" prefWidth="46.0" text="" textFill="WHITE" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer5" layoutX="687.0" layoutY="204.0" prefHeight="406.0" prefWidth="135.0">
       <children>
-        <VBox fx:id="vbxPlayerBid5b" layoutX="68.0" layoutY="3.0" prefHeight="350.0" prefWidth="72.0" />
-        <VBox fx:id="vbxPlayerBid5a" layoutX="1.0" layoutY="2.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid5b" layoutX="68.0" layoutY="35.0" prefHeight="350.0" prefWidth="72.0" />
+        <VBox fx:id="vbxPlayerBid5a" layoutX="1.0" layoutY="35.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane5" layoutX="-1.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid5" layoutX="93.0" layoutY="6.0" text="" textFill="WHITE" />
-            <Label fx:id="pPlayerBid52" layoutX="93.0" layoutY="68.0" text="" textFill="WHITE" />
+            <Label layoutX="69.0" layoutY="7.0" text="Total Money" />
+            <Label fx:id="lblPlayerMoney5" layoutX="69.0" layoutY="21.0" prefWidth="60.0" text="" />
           </children>
         </Pane>
+        <Label layoutX="1.0" layoutY="7.0" text="Bet:" />
+        <Label fx:id="pPlayerBid52" layoutX="81.0" layoutY="8.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label fx:id="pPlayerBid5" layoutX="30.0" layoutY="7.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer6" layoutX="822.0" layoutY="155.0" prefHeight="406.0" prefWidth="135.0">
       <children>
-        <VBox fx:id="vbxPlayerBid6b" layoutX="67.0" layoutY="-2.0" prefHeight="350.0" prefWidth="72.0" />
-        <VBox fx:id="vbxPlayerBid6a" layoutX="0.0" layoutY="-1.0" prefHeight="350.0" prefWidth="58.0" />
+        <VBox fx:id="vbxPlayerBid6b" layoutX="68.0" layoutY="35.0" prefHeight="350.0" prefWidth="72.0" />
+        <VBox fx:id="vbxPlayerBid6a" layoutX="0.0" layoutY="35.0" prefHeight="350.0" prefWidth="58.0" />
         <Pane fx:id="pPlayerPane6" layoutX="-2.0" layoutY="362.0" prefHeight="98.0" prefWidth="135.0">
           <children>
-            <Label fx:id="pPlayerBid6" layoutX="93.0" layoutY="3.0" text="" textFill="WHITE" />
-            <Label fx:id="pPlayerBid62" layoutX="93.0" layoutY="68.0" text="" textFill="WHITE" />
+            <Label layoutX="68.0" layoutY="7.0" text="Total Money" />
+            <Label fx:id="lblPlayerMoney6" layoutX="68.0" layoutY="21.0" prefWidth="60.0" text="" />
           </children>
         </Pane>
+        <Label layoutX="-2.0" layoutY="7.0" text="Bet:" />
+        <Label fx:id="pPlayerBid6" layoutX="29.0" layoutY="7.0" prefHeight="20.0" prefWidth="46.000099999997474" text="" textFill="WHITE" />
+        <Label fx:id="pPlayerBid62" layoutX="76.0" layoutY="5.0" prefHeight="24.0" prefWidth="58.0" text="" textFill="WHITE" />
       </children>
     </AnchorPane>
     <Label fx:id="MsgLable" layoutX="67.0" layoutY="58.0" prefHeight="25.0" prefWidth="444.0" text="" />
