--- a/BlackJackFX/src/blackjackfx/resources/CSS/createplayersscreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/createplayersscreen.css
@@ -13,6 +13,15 @@
     -fx-background-color: linear-gradient(#cc9900,#cc6600);
     -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
 }
+.combo-box{
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-size: 14 px;
+    -fx-background-color: linear-gradient(#cc9900,#cc6600);
+    -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
+    
+    
+}
 
 .button:hover{
  -fx-background-color: linear-gradient(#cc6600,#cc9900);   
