--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -44,6 +44,7 @@
         <Label fx:id="pPlayerBid1" layoutX="28.0" layoutY="7.0" prefHeight="24.0" prefWidth="46.0" text="" textFill="WHITE" />
         <Label fx:id="pPlayerBid12" layoutX="84.0" layoutY="7.0" prefHeight="20.0" prefWidth="58.0" text="" textFill="WHITE" />
         <Label layoutX="-6.0" layoutY="10.0" prefWidth="32.0" text="Bet:" />
+        <Label fx:id="lblPlayerMessage1" layoutX="-9.0" layoutY="260.0" prefHeight="25.0" prefWidth="135.0" text="" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer2" layoutX="179.0" layoutY="213.0" prefHeight="405.9998779296875" prefWidth="135.0">
@@ -59,6 +60,7 @@
         <Label fx:id="pPlayerBid22" layoutX="78.0" layoutY="7.0" prefHeight="20.0" prefWidth="58.0" text="" textFill="WHITE" />
         <Label fx:id="pPlayerBid2" layoutX="21.0" layoutY="7.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
         <Label layoutX="-8.0" layoutY="7.0" text="Bet:" />
+        <Label fx:id="lblPlayerMessage2" layoutX="-8.0" layoutY="284.0" prefHeight="25.0" prefWidth="135.0" text="" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer3" layoutX="322.0" layoutY="235.0" prefHeight="406.0" prefWidth="135.0">
@@ -74,6 +76,7 @@
         <Label fx:id="pPlayerBid3" layoutX="22.0" layoutY="8.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
         <Label fx:id="pPlayerBid32" layoutX="73.0" layoutY="8.0" prefHeight="20.0" prefWidth="58.0" text="" textFill="WHITE" />
         <Label layoutX="-8.0" layoutY="11.0" text="Bet:" />
+        <Label fx:id="lblPlayerMessage3" layoutX="6.0" layoutY="267.0" prefHeight="25.0" prefWidth="135.0" text="" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer4" layoutX="554.0" layoutY="218.0" prefHeight="406.0" prefWidth="135.0">
@@ -89,6 +92,7 @@
         <Label layoutX="0.0" layoutY="7.0" text="Bet:" />
         <Label fx:id="pPlayerBid4" layoutX="29.0" layoutY="8.0" prefWidth="46.0" text="" textFill="WHITE" />
         <Label fx:id="pPlayerBid42" layoutX="81.0" layoutY="8.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label fx:id="lblPlayerMessage4" layoutX="-8.0" layoutY="281.0" prefHeight="25.0" prefWidth="135.0" text="" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer5" layoutX="687.0" layoutY="204.0" prefHeight="406.0" prefWidth="135.0">
@@ -104,6 +108,7 @@
         <Label layoutX="1.0" layoutY="7.0" text="Bet:" />
         <Label fx:id="pPlayerBid52" layoutX="81.0" layoutY="8.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
         <Label fx:id="pPlayerBid5" layoutX="30.0" layoutY="7.0" prefHeight="20.0" prefWidth="46.0" text="" textFill="WHITE" />
+        <Label fx:id="lblPlayerMessage5" layoutX="-14.0" layoutY="302.0" prefHeight="25.0" prefWidth="135.0" text="" />
       </children>
     </AnchorPane>
     <AnchorPane fx:id="apPlayer6" layoutX="822.0" layoutY="155.0" prefHeight="406.0" prefWidth="135.0">
@@ -119,6 +124,7 @@
         <Label layoutX="-2.0" layoutY="7.0" text="Bet:" />
         <Label fx:id="pPlayerBid6" layoutX="29.0" layoutY="7.0" prefHeight="20.0" prefWidth="46.000099999997474" text="" textFill="WHITE" />
         <Label fx:id="pPlayerBid62" layoutX="76.0" layoutY="5.0" prefHeight="24.0" prefWidth="58.0" text="" textFill="WHITE" />
+        <Label fx:id="lblPlayerMessage6" layoutX="-15.0" layoutY="278.0" prefHeight="25.0" prefWidth="135.0" text="" />
       </children>
     </AnchorPane>
     <Label fx:id="MsgLable" layoutX="67.0" layoutY="58.0" prefHeight="25.0" prefWidth="444.0" text="" />
@@ -132,6 +138,7 @@
     <Pane fx:id="pDeckPlace5" layoutX="781.0" layoutY="9.0" prefHeight="103.0" prefWidth="78.0" rotate="118.0" />
     <Pane fx:id="pDeckPlace6" layoutX="782.0" layoutY="8.0" prefHeight="103.0" prefWidth="78.0" rotate="118.0" />
     <Pane fx:id="pDeckPlaceD" layoutX="780.0" layoutY="4.0" prefHeight="103.0" prefWidth="78.0" rotate="118.0" />
+    <Label fx:id="lblDealerMessage" layoutX="428.0" layoutY="64.0" prefHeight="25.0" prefWidth="135.0" text="" />
   </children>
   <stylesheets>
     <URL value="@resources/CSS/gamescreen.css" />
