--- a/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
@@ -16,6 +16,12 @@
     -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
 }
 
+.PlayerMessage{
+    -fx-text-fill: #ffff00;
+    -fx-font-size: 12 px;
+    -fx-font-weight: bold;
+}
+
 .button:hover{
  -fx-background-color: linear-gradient(#cc6600,#cc9900);   
 }
