--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/resources/CSS/loginscreen.css
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/resources/CSS/loginscreen.css
@@ -34,3 +34,10 @@
    -fx-text-fill: white;
     
 }
+
+#ErrorDisplay{
+    -fx-alignment: center;
+    -fx-text-fill: red;
+    -fx-font-size: 14 px;
+    
+}
