--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/LoginScreen.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/LoginScreen.fxml
@@ -10,9 +10,9 @@
 <AnchorPane id="AnchorPane" prefHeight="205.0" prefWidth="306.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.LoginScreenController">
   <children>
     <Label layoutX="22.0" layoutY="30.0" text="Server Name" />
-    <TextField fx:id="txtServerName" layoutX="116.0" layoutY="27.0" prefWidth="158.0" />
+    <TextField fx:id="txtServerName" layoutX="116.0" layoutY="27.0" prefWidth="158.0" promptText="" text="localhost" />
     <Label layoutX="22.0" layoutY="57.0" text="Server Port" />
-    <TextField fx:id="txtPortValue" layoutX="116.0" layoutY="54.0" prefWidth="158.0" />
+    <TextField fx:id="txtPortValue" layoutX="116.0" layoutY="54.0" prefWidth="158.0" promptText="" text="8080" />
     <Button fx:id="Connect" layoutX="91.0" layoutY="128.0" mnemonicParsing="false" onAction="#ConnectToServer" prefHeight="39.0" prefWidth="129.5" text="Connect" />
     <Label fx:id="ErrorDisplay" layoutX="22.0" layoutY="86.0" prefWidth="237.0" text="" />
   </children>
