--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/CreateGameScreen.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/CreateGameScreen.fxml
@@ -42,6 +42,7 @@
         <ComboBox fx:id="cbCompPlayerCount" layoutX="237.0" layoutY="116.0" minWidth="45.0" prefWidth="45.0" promptText="">
           <items>
             <FXCollections fx:factory="observableArrayList">
+              <Integer fx:value="0" />
               <Integer fx:value="1" />
               <Integer fx:value="2" />
               <Integer fx:value="3" />
