--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/JoinGameScreen.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/JoinGameScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.JoinGameScreenController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml"  fx:controller="blackjackfx.Controllers.JoinGameScreenController">
   <children>
     <Button fx:id="btnCreateGame" layoutX="105.0" layoutY="86.0" mnemonicParsing="false" onAction="#CreateGamePress" prefHeight="167.0" prefWidth="94.0" text="CreateGame" />
     <Button fx:id="btnJoinGame" layoutX="339.0" layoutY="86.0" mnemonicParsing="false" onAction="#JoinGamePress" prefHeight="167.0" prefWidth="94.0" text="JoinGame" />
