--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/WaitingGames.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/WaitingGames.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
+<?import javafx.collections.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -15,6 +16,15 @@
     <TextField fx:id="txtPlayerName" disable="true" layoutX="88.0" layoutY="367.0" prefWidth="118.0" />
     <Button fx:id="btnJoin" disable="true" layoutX="217.0" layoutY="368.0" mnemonicParsing="false" onAction="#JoinToTheGame" text="Join" />
     <Button fx:id="BackToWait" disable="true" layoutX="402.0" layoutY="369.0" mnemonicParsing="false" onAction="#GoToWaiting" text="Back" />
+    <ChoiceBox fx:id="ChosePlayer" layoutX="88.0" layoutY="369.0" prefWidth="118.0" visible="false">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ChoiceBox>
   </children>
   <stylesheets>
     <URL value="@resources/CSS/waitinggames.css" />
